# tiff2png

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: headers.h  helper.h  options.h
scripts/: tiff.convert2png.sh
src/: tiff2png.cpp
